crates/otter-vm/tests/compile_fail/root_raw_gc_import_rejected.rs
fn main() {
    let _raw: Option<otter_gc::RawGc> = None;
}
